namespace DigitalOwl.Api.Infrastructure.Auth
{
    public static class Roles
    {
        public const string Administrator = "Administrator";
        public const string Customer = "Customer";
    }
}