using DigitalOwl.Repository.Interface.Entity;

namespace DigitalOwl.Repository.Entity
{
    public class PollAnswer : IEntity
    {
        public int Id { get; set; }
    }
}