namespace DigitalOwl.Repository.Entity
{
    public class PollQuestion
    {
        
    }
}