namespace DigitalOwl.Repository.Interface.Entity
{
    public interface IEntity
    {
        public int Id { get; set; }
    }
}