using DigitalOwl.Repository.Entity;
using DigitalOwl.Repository.Interface.Base;

namespace DigitalOwl.Repository.Interface
{
    public interface IGroupMessageRepository : IGenericRepository<GroupMessage>
    {
    }
}