using DigitalOwl.Repository.Entity;
using DigitalOwl.Repository.Interface.Base;

namespace DigitalOwl.Repository.Interface
{
    /// <summary>
    /// Interface to GroupRepository 
    /// </summary>
    public interface IGroupRepository : IGenericRepository<Group>
    {
        
    }
}