using DigitalOwl.Repository.Entity;
using DigitalOwl.Repository.Interface.Base;

namespace DigitalOwl.Repository.Interface
{
    /// <summary>
    /// Poll repository interface.
    /// </summary>
    public interface IPollRepository : IGenericRepository<Poll>
    {
        
    }
}